# GraphRAG-MCP

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  patch_openai.py  pyproject.toml  requirements.txt  run_mcp_server.py
core/: bm25_index.py  config.py  data_loader.py  graph_only_search.py  graph_store.py  hybrid_search.py  llm_factory.py  search.py  source_resolver.py  vector_store.py  version.py
mcp_server/: server.py
mcp_server/tools/: basic_search.py  drift_search.py  entity_query.py  global_search.py  hybrid_search_tool.py  local_search.py
scripts/: populate_stores.py
