[project]
name = "mcp-sia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.5",
    "graphrag==2.7.1",
    "uvicorn>=0.42.0",
]
[tool.poe.tasks]
patch-openai = "python patch_openai.py"

# Composite task: Syncs dependencies with uv, then automatically runs the patch
setup = [
  { cmd = "uv sync" },
  { ref = "patch-openai" }
]

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
]
